--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.18.0
   cloud_firestore: ^3.1.18
+  mobx: ^2.0.7
+  flutter_mobx: ^2.0.6+1
+  build_runner: ^2.1.11
+  mobx_codegen: ^2.0.7
+  google_fonts: ^3.0.1
 
 dev_dependencies:
   flutter_test:
