--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_mobx: ^2.0.6+1
   google_fonts: ^3.0.1
   intl: ^0.17.0
+  dropdown_search: ^3.0.1
 
 dev_dependencies:
   flutter_test:
